2009-06-30  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py: Don't be overly
	enthusiastic when shell-quoting into the lirc configuration
	file, empty strings (not none) would quoted as "''"

2009-06-30  Bastien Nocera  <hadess@hadess.net>

	* data/receivers.conf: Remove Snapstream definition, the
	remote driver has been merged into the kernel since 2006
	(Closes: #557429)

2009-06-30  Bastien Nocera  <hadess@hadess.net>

	* data/org.gnome.LircProperties.Mechanism.conf:
	Really fix the D-Bus configuration for newer D-Buses

2009-04-19  Mario Blättermann  <mariobl@gnome.org>

	* help/de/*: Added German translation.
	* help/Makefile.am: Added de to DOC_LINGUAS.

2009-03-08  Murray Cumming  <murrayc@murrayc.com>

	* help/es/legal.xml, help/sv/legal.xml: Removed generated files.
	If these are really meant to be in svn for some reason then please 
	explain it to me.

2008-12-09  Bastien Nocera  <hadess@hadess.net>

	* data/org.gnome.LircProperties.Mechanism.conf:
	Fix for changes in recent D-Bus versions (Closes: #563853)

0.3.1:

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.ac: 0.3.1

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py: Check which actions are
	passed to the backend, so we don't launch "stop ; rm -rf /"
	by accident (Closes: #558128)

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/Makefile.am:
	* gnome_lirc_properties/backend.py:
	* gnome_lirc_properties/lirc.py:
	* gnome_lirc_properties/shellquote.py: Add shellquote helper
	from http://liw.iki.fi/liw/python-licosmamo/, quote and unquote
	configuration options from the hardware configuration file, so
	that 1) input devices with brackets in their names work, 2)
	arbitrary commands can't be added to the default lirc configuration
	file (Closes: #558127)

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/hardware.py: Fix USB hiddev device (without